# ia-writer-templates

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  manual-release.yml  release.yml
src/fragments/: Info.plist  document.html  footer.html  header.html  title.html
src/ia_writer_templates/: __init__.py  main.py
templates/github/: Info.plist  bundle.json  document.html
templates/neon_flux/: Info.plist  LICENSE.txt  bundle.json  document.html  footer.html  header.html  neon-flux-dark.css  neon-flux-light.css  neon-flux.css  style.css  title.html
tests/: __init__.py  test_github_download.py  test_github_template.py
tests/fixtures/: README.md
